--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
+    "browser-sync": "^2.17.6",
     "gulp": "^3.9.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-image-resize": "^0.10.0"
