--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "browser-sync": "^2.17.6",
     "gulp": "^3.9.1",
     "gulp-htmlmin": "^3.0.0",
-    "gulp-image-resize": "^0.10.0"
+    "gulp-image-resize": "^0.10.0",
+    "gulp-minify-inline": "^0.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
